syntax = "proto3";

package proto;

import "common.proto";

option go_package = "ggo.kicksware.com/api/user-service/api/gRPC/proto";
option csharp_namespace = "Proto";

message MailRequest {
  string userID = 1;
  string callbackURL = 2;
  string messageContent = 3;
}

message SubscribeRequest {
  string userID = 1;
  string email = 2;
}

service MailService {
  rpc SendEmailConfirmation(MailRequest) returns (CommonResponse);
  rpc SendResetPassword(MailRequest) returns (CommonResponse);
  rpc SendNotification(MailRequest) returns (CommonResponse);
  rpc Subscribe(SubscribeRequest) returns (CommonResponse);
  rpc Unsubscribe(SubscribeRequest) returns (CommonResponse);
}